# TAPF-card-game-server

./: .appveyor.yml  .travis.yml  README.md  appveyor.yml  card-game-server.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Game.hs  Main.hs
src/: Lib.hs
src/Game/: Data.hs  Funcs.hs  Types.hs
test/: Spec.hs
