name:                card-game-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Zialus/tapf-card-game-webserver#readme
license:             BSD3
license-file:        LICENSE
author:              Raul Ferreira
maintainer:          example@example.com
copyright:           2017 Raul Ferreira
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable card-game-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , card-game-server
                     , Spock >=0.11
                     , mtl
                     , text
  default-language:    Haskell2010

test-suite card-game-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , card-game-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zialus/tapf-card-game-webserver
